FenicsPDE/MOND/jupyternbs/dolfin_reports/jitfailure-dolfin_expression_c3b9726ccbdff18a5e410a8bf14bdcbd/error.log
/tmp/tmpsvz_8gdh/dolfin_expression_c3b9726ccbdff18a5e410a8bf14bdcbd.cpp: In member function ‘virtual void dolfin::dolfin_expression_c3b9726ccbdff18a5e410a8bf14bdcbd::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpsvz_8gdh/dolfin_expression_c3b9726ccbdff18a5e410a8bf14bdcbd.cpp:74:31: error: ‘mgbeps’ was not declared in this scope
           values[0] = a0*4*pi*mgbeps/pi*1/(pow(x[0],2) + pow(x[1],2) + pow(x[2],2) + pow(eps,2));
                               ^~~~~~
/tmp/tmpsvz_8gdh/dolfin_expression_c3b9726ccbdff18a5e410a8bf14bdcbd.cpp:74:31: note: suggested alternative: ‘mgb’
           values[0] = a0*4*pi*mgbeps/pi*1/(pow(x[0],2) + pow(x[1],2) + pow(x[2],2) + pow(eps,2));
                               ^~~~~~
                               mgb
/tmp/tmpsvz_8gdh/dolfin_expression_c3b9726ccbdff18a5e410a8bf14bdcbd.cpp: In member function ‘virtual double dolfin::dolfin_expression_c3b9726ccbdff18a5e410a8bf14bdcbd::get_property(std::__cxx11::string) const’:
/tmp/tmpsvz_8gdh/dolfin_expression_c3b9726ccbdff18a5e410a8bf14bdcbd.cpp:86:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
           if (name == "a0") return a0;          if (name == "ms") return ms;          if (name == "mgb") return mgb;          if (name == "G") return G;          if (name == "ly") return ly;          if (name == "kp") return kp;          if (name == "radius_tot") return radius_tot;          if (name == "volume_out") return volume_out;          if (name == "x_close") return x_close;          if (name == "y_close") return y_close;          if (name == "z_close") return z_close;          if (name == "radius_close") return radius_close;          if (name == "eps") return eps;
           ^~
/tmp/tmpsvz_8gdh/dolfin_expression_c3b9726ccbdff18a5e410a8bf14bdcbd.cpp:86:49: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           if (name == "a0") return a0;          if (name == "ms") return ms;          if (name == "mgb") return mgb;          if (name == "G") return G;          if (name == "ly") return ly;          if (name == "kp") return kp;          if (name == "radius_tot") return radius_tot;          if (name == "volume_out") return volume_out;          if (name == "x_close") return x_close;          if (name == "y_close") return y_close;          if (name == "z_close") return z_close;          if (name == "radius_close") return radius_close;          if (name == "eps") return eps;
                                                 ^~
